<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/layout_textview"
        android:backgroundTint="?attr/backgroundColor"
        android:elevation="20dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="20dp"
            android:text="@string/tit_popup_reserva"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/aviso_popup_reserva"
            android:textAllCaps="false"
            android:gravity="center"
            android:textColor="?attr/colorOnBackground"
            android:textSize="15sp"
            android:layout_marginVertical="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/desc_popup_reserva"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="?attr/text_midDestaque"
            android:textSize="12sp"
            android:layout_marginVertical="15dp"/>
        <LinearLayout
            android:id="@+id/btnFechar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/botao_layout_borda_cor"
            android:clickable="true"
            android:layout_marginVertical="20dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="50dp"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            tools:ignore="TouchTargetSizeCheck">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/icon_login"
                android:minHeight="15dp"
                android:scaleType="fitCenter"
                app:tint="?attr/colorOnSurface"
                android:src="@drawable/icon_fechar" />

            <!-- Linha separadora -->
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"

                android:background="?attr/colorOnSurface" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="25dp"
                android:gravity="center_vertical"
                android:text="@string/btnFechar"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnSurface"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>