<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="10dp"
    android:background="@drawable/item_design"
    android:backgroundTint="?attr/colorSurface">

    <FrameLayout
        android:id="@+id/cxImgItem"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:backgroundTint="?attr/item_photo_back"
        android:background="@drawable/img_item_livro"
        android:paddingVertical="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llInfoItem">

        <ImageView
            android:id="@+id/imgItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/imagem_item"
            android:src="@drawable/img_livro_teste"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/llInfoItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/cxImgItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/titulo_item"
            android:textColor="?attr/colorOnBackground"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tvAutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/autor_item"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tvPrazo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="5dp"
            android:text="@string/tv_prazo_reserva"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="15sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
